# clickhouse_kafka

./: Landing_API.ipynb  main.py  produce.py  pyproject.toml  readme.md  requirements.txt
src/kafka_clickhouse_project/: __init__.py  config.py
src/kafka_clickhouse_project/consumers/: data_consumer.py
src/kafka_clickhouse_project/producers/: data_producer.py
src/kafka_clickhouse_project/utils/: fake_data.py
tests/test_kafka_clickhouse/: test_producer.py
